--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,4 @@
 <mat-toolbar class="navbar" color="primary">
-  <mat-icon>local_hospital</mat-icon>
+  <mat-icon style="margin-right: 10px;">local_hospital</mat-icon>
   <span>Online klinika</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button>Belépés</button>
 </mat-toolbar>
