Start debug process from frontend

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar class="navbar" color="primary">
   <mat-icon style="margin-right: 10px;">local_hospital</mat-icon>
   <span>Online klinika</span>
+  <span class="example-spacer"></span>
+  <button (click)="onDebugSend()" mat-raised-button>Debug</button>
 </mat-toolbar>
