--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,2 @@
 <app-header></app-header>
-<div fxLayoutAlign="center center" style="margin-top: 100px;">
-    <app-login></app-login>
-</div>
+<router-outlet></router-outlet>
