--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -2,5 +2,6 @@
   <mat-icon style="margin-right: 10px;">local_hospital</mat-icon>
   <span>Online klinika</span>
   <span class="example-spacer"></span>
+  <button [routerLink]="['/workflow']" style="margin-right: 15px;" mat-raised-button>Folyamat</button>
   <button (click)="onDebugSend()" mat-raised-button>Debug</button>
 </mat-toolbar>
