--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
-<mat-card class="login-card">
+<div fxLayoutAlign="center center" style="margin-top: 100px">
+  <mat-card class="login-card">
     <mat-toolbar color="primary">Bejelentkezés</mat-toolbar>
     <form class="login-form" fxLayoutalign="stretch" fxLayout="column">
       <mat-form-field appearance="fill">
@@ -11,4 +12,5 @@
       </mat-form-field>
       <button mat-raised-button color="accent">Belépés</button>
     </form>
-</mat-card>
+  </mat-card>
+</div>
