Taskok név szerint frontend-en

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -3,5 +3,6 @@
   <span>Online klinika</span>
   <span class="example-spacer"></span>
   <button [routerLink]="['/workflow']" style="margin-right: 15px;" mat-raised-button>Folyamat</button>
+  <button [routerLink]="['/tasks']" style="margin-right: 15px;" mat-raised-button>Feladatok</button>
   <button (click)="onDebugSend()" mat-raised-button>Debug</button>
 </mat-toolbar>
