--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar" color="primary">
   <mat-icon style="margin-right: 10px;">local_hospital</mat-icon>
-  <span>Online klinika</span>
+  <button [routerLink]="['/']" mat-button style="font-size: 1.25rem;">Online klinika</button>
   <span class="example-spacer"></span>
   <button [routerLink]="['/workflow']" style="margin-right: 15px;" mat-raised-button>Folyamat</button>
   <button [routerLink]="['/tasks']" style="margin-right: 15px;" mat-raised-button>Feladatok</button>
