--- a/frontend/src/app/components/task-detail/task-detail.component.html
+++ b/frontend/src/app/components/task-detail/task-detail.component.html
@@ -1,1 +1,5 @@
-<p *ngIf="task !== undefined">{{ task.taskDto.name }}</p>
+<div *ngIf="task !== undefined">
+  <p>{{ task.taskDto.id }}</p>
+  <p>{{ task.taskDto.name }}</p>
+  <button mat-raised-button color="accent" (click)="onCompleteTask()">Befejezés</button>
+</div>
