Nincs service, de működik

--- a/frontend/src/app/components/tasks-page/tasks-page.component.html
+++ b/frontend/src/app/components/tasks-page/tasks-page.component.html
@@ -19,6 +19,7 @@
     <app-task-detail
       style="width: 100%"
       [task]="selectedTask"
+      (completeTask)="onTaskComplete()"
     ></app-task-detail>
   </mat-grid-tile>
 </mat-grid-list>
