Igazítások, azonos még mindig nem frissül

--- a/frontend/src/app/components/task/beteg-ertesitese/beteg-ertesitese.component.html
+++ b/frontend/src/app/components/task/beteg-ertesitese/beteg-ertesitese.component.html
@@ -1,1 +1,6 @@
-<p>beteg-ertesitese works!</p>
+<mat-checkbox
+  class="example-margin"
+  [checked]="betegErtesiteseDto.elmarad"
+>
+  Elmarad
+</mat-checkbox>
