--- a/frontend/src/app/components/task/felulvizsgalat/felulvizsgalat.component.html
+++ b/frontend/src/app/components/task/felulvizsgalat/felulvizsgalat.component.html
@@ -1,1 +1,6 @@
-<p>felulvizsgalat works!</p>
+<mat-checkbox
+  class="example-margin"
+  [checked]="felulvizsgalatDto.szakorvosiVizsgalat"
+>
+  Szakorvosi vizsgálat
+</mat-checkbox>
