--- a/frontend/src/app/components/task/beteg-ertesitese/beteg-ertesitese.component.html
+++ b/frontend/src/app/components/task/beteg-ertesitese/beteg-ertesitese.component.html
@@ -1,6 +1,6 @@
-<mat-checkbox
-  class="example-margin"
-  [checked]="betegErtesiteseDto.elmarad"
->
-  Elmarad
-</mat-checkbox>
+<app-variable-checkbox
+  [processInstanceId]="betegErtesiteseDto.taskDto.processInstanceId"
+  [name]="'elmarad'"
+  [displayName]="'Elmarad'"
+  [value]="betegErtesiteseDto.elmarad"
+></app-variable-checkbox>
