--- a/frontend/src/app/components/task/felulvizsgalat/felulvizsgalat.component.html
+++ b/frontend/src/app/components/task/felulvizsgalat/felulvizsgalat.component.html
@@ -1,6 +1,6 @@
-<mat-checkbox
-  class="example-margin"
-  [checked]="felulvizsgalatDto.szakorvosiVizsgalat"
->
-  Szakorvosi vizsgálat
-</mat-checkbox>
+<app-variable-checkbox
+  [processInstanceId]="felulvizsgalatDto.taskDto.processInstanceId"
+  [name]="'szakorvosiVizsgalat'"
+  [displayName]="'Szakorvosi vizsgálat'"
+  [value]="felulvizsgalatDto.szakorvosiVizsgalat"
+></app-variable-checkbox>
