--- a/frontend/src/app/components/task/vizsgalat/vizsgalat.component.html
+++ b/frontend/src/app/components/task/vizsgalat/vizsgalat.component.html
@@ -1,6 +1,6 @@
-<mat-checkbox
-  class="example-margin"
-  [checked]="vizsgalatDto.rontgen"
->
-  Röntgen
-</mat-checkbox>
+<app-variable-checkbox
+  [processInstanceId]="vizsgalatDto.taskDto.processInstanceId"
+  [name]="'rontgen'"
+  [displayName]="'Röntgen'"
+  [value]="vizsgalatDto.rontgen"
+></app-variable-checkbox>
