--- a/frontend/src/app/components/workflow/workflow.component.html
+++ b/frontend/src/app/components/workflow/workflow.component.html
@@ -1,4 +1,8 @@
 <div fxLayoutAlign="center center" fxLayout="column">
-  <img src="../../../assets/fogszabalyzo-folyamat.png" alt="" style="width: 50%; margin: 50px;">
+  <img
+    src="../../../assets/fogszabalyzo-folyamat.png"
+    alt=""
+    style="width: 50%; margin: 50px"
+  />
   <button (click)="back()" mat-raised-button color="accent">Vissza</button>
 </div>
