--- a/frontend/src/app/components/task-detail/task-detail.component.html
+++ b/frontend/src/app/components/task-detail/task-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="task !== undefined">
   <h4 style="display: inline;">{{ task.taskDto.name }}</h4>
   <p style="display: inline;"> ({{ task.taskDto.id }})</p>
-  <button style="margin-left: 4rem;" mat-raised-button color="danger" (click)="onClosePanel()"></button>
+  <button style="margin-left: 4rem;" mat-raised-button color="danger" (click)="onClosePanel()">X</button>
   <div style="margin-top: 1rem; margin-bottom: 1rem;" [ngSwitch]="this.task.taskTipus">
     <app-megjelenes-idoponton *ngSwitchCase="TaskTipus.TASK_MEGJELENES_IDOPONTON"></app-megjelenes-idoponton>
     <app-beteg-ertesitese [taskPayload]="task" *ngSwitchCase="TaskTipus.TASK_BETEG_ERTESITESE"></app-beteg-ertesitese>
