--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 .navbar {
-    padding-right: 35px;
-    padding-left: 35px;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .example-spacer {
